proper validation error messages email fixes

--- a/vetcms/src/vetcms.ServerApplication/Infrastructure/Communication/Mail/MailTemplates/CreatedUserChangePasswordTemplate.html
+++ b/vetcms/src/vetcms.ServerApplication/Infrastructure/Communication/Mail/MailTemplates/CreatedUserChangePasswordTemplate.html
@@ -70,7 +70,7 @@
             <p>Kedves {{visible_name}}!</p>
             <p>Örömmel értesítjük, hogy az Ön profilja sikeresen létre lett hozva rendszerünkben.</p>
             <p>A profil aktiválásához és a belépéshez kérjük, kattintson az alábbi linkre, ahol megadhatja jelszavát:</p>
-            <a href="{{URL}}" class="action-link">Jelszó beállítása</a>
+            <a href="{{URL}}" target="_blank" class="action-link">Jelszó beállítása</a>
         </div>
         <div class="email-footer">
             <p>&copy; {{year}} VETCMS. Minden jog fenntartva.</p>
